working on the golden interval page

--- a/html/dungeon/halfway-well.html
+++ b/html/dungeon/halfway-well.html
@@ -71,7 +71,7 @@
                   <li><a href="#monsters">Golden Interval</a></li>
                 </ul>
                 <li><a href="#items">Items</a></li>
-                <li><a href="#items">Golden Interval</a></li>
+                <li><a href="#golden_interval">Golden Interval</a></li>
               </ul>
             </div>
             <div class="dungeon_desc_table">
@@ -3081,7 +3081,7 @@
               However, it won't spawn if you already have a Trapper Bracelet in your inventory, so you won't be able to obtain 2 at the same time.
             </p>
           </div>
-          <h2 id="floor_guide">Golden Interval</h2>
+          <h2 id="golden_interval">Golden Interval</h2>
           <p>Golden Stairs is hidden inside of a breakable wall 100% of the time between 50~55F.<br>You'll be returned to 56F after claiming the treasure and exiting from the Golden Interval area.<br>Golden Interval maps are shuffle type, so items like Tunnel Staff and Pitfalls will be useless.</p>
           <p>Gitan is the only item that can be found on the ground inside this Golden Interval,<br>and there are no traps, so you'll need to rely on the items you gathered prior to entering the area.<br>That said, remember that you can insert Gitan into a Storage Pot and use it as a projectile.</p>
           <p>Pako Hammer makes an appearance, so you'll want to use the Swap Staff technique<br>combined with traps like Poison Arrow, Spoil, or Landmine to deal with them.</p>
