--- a/html/dungeon/road-to-the-end.html
+++ b/html/dungeon/road-to-the-end.html
@@ -6100,7 +6100,7 @@
             </li>
             <li>Arrow Traps can be generated, meaning they can be used to replenish arrows.</li>
           </ul>
-          <h3>First (6~10F, Return 11F)</h3>
+          <h3 id="golden_interval_1">First (6~10F, Return 11F)</h3>
           <p>It's rare to find Wall Collapse Scrolls this early in the dungeon, so you're unlikely to visit this Golden Interval.<br>That said, if you do get lucky, be sure to explore the entire map on each floor to collect all items.</p>
           <p>The monster table changes from 3F and includes numerous monsters with ranged attacks.<br>Snacky can also appear, often causing a Horse Ronin or Pop Tank to level up into a Horse Samurai or Cranky Tank.<br>Store Gitan inside of a Storage Pot, and use the Gitan as a projectile to deal with leveled up monsters.<br>You could try to intentionally level one of those monsters up as well, to increase the amount of experience you gain.</p>
           <p>Dragon Killer and Dragon Shield can only be found in Golden Intervals, and are both powerful pieces of equipment.<br>Dragon Killer surpasses Dotanuki with its 15 base attack and 7 slots, and should be used as a main weapon.<br>Ryujin Sword can be synthesized using 4 Dragon Killers as well, and is the strongest main weapon in this dungeon.<br>If you have a Possession Staff, you can create an Iai on 3~4F and use its special attack to obtain more Dragon Killers.</p>
@@ -6146,7 +6146,7 @@
               <td>Golden Sword, Golden Shield, Wooden Shield, Happy Shield, Evasive Shield,<br>Echo Shield, Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
             </tr>
           </table>
-          <h3>Second (24~29F, Return 30F)</h3>
+          <h3 id="golden_interval_2">Second (24~29F, Return 30F)</h3>
           <p>Golden Interval that can have a drastic effect on how the rest of the dungeon progresses.<br>In particular, this is the last chance to obtain equipment effective against Dragon type monsters.<br>Archdragon will likely give you trouble if you fail to obtain a Dragon Shield and don't have an Extinction Scroll.</p>
           <p>Dragon, Sky Dragon, and Skull Dragon appear on 1~2F, and <span class="dungeon_desc_warning">Lashaaga</span> is added to the monster table on 3~4F.<br>Lashaaga normally appears on 70F+ inside this dungeon, and is far stronger than anything you've seen so far.<br>Keep multiple bags of 1000+ Gitan inside a Storage Pot to use as a projectile to one-shot it,<br>or use an item such as Miss Staff to weaken it first before using regular attacks.<br>You might have a chance of defeating it without items if you have a Dragon Killer,<br>along with a shield with the 見 (Evasive Shield) and 眠 (Slumber Scroll) seals.<br>If you don't have a way to deal with Lashaaga, it's best to hurry through 3~4F to limit the number of encounters.</p>
           <p>The item table is the same as the first Golden Interval. Surprise Pots can contain items from multiple categories.<br>Lashaaga doesn't spawn on 1~2F, so you can safely linger for experience points and additional item drops.<br>An ally Armordillo Pop or Iai can be used to gather Dragon Killers for a Ryujin Sword as well.</p>
@@ -6185,7 +6185,7 @@
               <td>Golden Sword, Golden Shield, Wooden Shield, Evasive Shield, Echo Shield,<br>Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
             </tr>
           </table>
-          <h3>Third (90~95F, Return 95F)</h3>
+          <h3 id="golden_interval_3">Third (90~95F, Return 95F)</h3>
           <p>You're nearly guaranteed to find this Golden Interval if you read a Wall Collapse Scroll on each of the 6 floors.<br>You'll be returned to 95F afterward, so there's a small chance to find another one as well.</p>
           <p>Basilisk Shield can rarely be found on the ground, and the treasure chest is guaranteed to contain a Mijinha.<br>Mixergon no longer appears at this point, so you'll need a Synthesis Pot if you want to transfer equipment.<br>Both items are exclusively found inside this third Golden Interval of this dungeon.</p>
           <p>Megataur, Gigahead, and Emperor Tusker are the only monsters inside this Golden Interval.<br>All three have high offensive and defensive stats, so don't let your guard down while searching for items.<br>These monsters all have a fixed item drop, so the only way to obtain additional Basilisk Shields<br>would be to bring an ally Armordillo or Kengo family monster inside. If you do so, Shiren should stand<br>next to the enemy monster to ensure the enemy monster doesn't defeat the ally monster.</p>
