--- a/html/dungeon/sealed-room.html
+++ b/html/dungeon/sealed-room.html
@@ -49,8 +49,8 @@
                 <li><a href="#items">Items</a></li>
                 <li><a href="#golden_interval">Golden Interval</a></li>
                 <ul>
-                  <li><a href="#waterfall_basin">First (6~10F, Return 11F)</a></li>
-                  <li><a href="#mountain_cave">Second (70~80F, Return 81F)</a></li>
+                  <li><a href="#golden_interval_1">First (6~10F, Return 11F)</a></li>
+                  <li><a href="#golden_interval_2">Second (70~80F, Return 81F)</a></li>
                 </ul>
               </ul>
             </div>
@@ -3408,8 +3408,8 @@
               </li>
             </ul>
           </div>
-          <h2 id="floor_guide">Golden Interval</h2>
-          <h3>First (6~10F, Return 11F)</h3>
+          <h2 id="golden_interval">Golden Interval</h2>
+          <h3 id="golden_interval_1">First (6~10F, Return 11F)</h3>
           <p>Heaven and Earth are the only scrolls that can be found in this Golden Interval,<br>so an Armordillo Pop can be used to quickly strengthen equipment.</p>
           <p>Homing Blade is found only in this Golden Interval (excluding Secret Phrases),<br>and is an excellent weapon to synthesize onto your main weapon,<br>as the 必 seal ensures that your regular attacks will never miss.</p>
           <p>Gamarra Shield is a collector's item that is exclusive to this Golden Interval.<br>Be sure to pick one up for the gallery if you haven't done so.</p>
@@ -3448,7 +3448,7 @@
               <td>Golden Sword, Golden Shield, Wooden Shield, Evasive Shield, Happy Shield<br>Echo Shield, Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
             </tr>
           </table>
-          <h3>Second (70~80F, Return 81F)</h3>
+          <h3 id="golden_interval_2">Second (70~80F, Return 81F)</h3>
           <p>The second Golden Interval has many exclusive pieces of equipment that differ from the first one.</p>
           <p>Sacred Sword and Sacred Shield have 14 and 16 slots, making them viable as both main or secondary equipment.<br>For example, you could synthesize many 幸 or 天 seals onto a Sacred Sword to use it as early game level up weapon,<br>or stack 14 火 seals to deal 60 damage per swing of your weapon at full HP, etc.<br>They can also be used as seal containers to free up storage space.</p>
           <p>Dodge Shield or Reflect Shield can be synthesized onto your main shield to make most projectiles a non-issue.<br>The 身 seal recommended over 返 because it allows you to dodge Silver Arrows from Horse Ronin family monsters.</p>
