--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -23,6 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Gameplay Basics</h2>
+          <p>Text</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#dungeon_related">Dungeon Related</a>
               <ul>
