--- a/html/system/golden-interval.html
+++ b/html/system/golden-interval.html
@@ -49,7 +49,75 @@
             </li>
           </ul>
           <h2 id="summary">Summary</h2>
-          <p>Table</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Dungeon</th>
+                <th>Floor</th>
+                <th>Return</th>
+                <th>Chance</th>
+                <th>Exclusive Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="/shiren2/html/dungeon/shuten-trail-hard.html#golden_interval">Shuten Trail Hard</a></td>
+                <td>3~6F</td>
+                <td>7F</td>
+                <td>30%</td>
+                <td class="text_left">Onigiri Sword, Gamarra Whip</td>
+              </tr>
+              <tr>
+                <td><a href="/shiren2/html/dungeon/onigashima.html#golden_interval">Onigashima</a></td>
+                <td>8~15F</td>
+                <td>11F</td>
+                <td>20%</td>
+                <td class="text_left">-</td>
+              </tr>
+              <tr>
+                <td><a href="/shiren2/html/dungeon/halfway-well.html#golden_interval">Halfway Well</a></td>
+                <td>50~55F</td>
+                <td>56F</td>
+                <td>100%</td>
+                <td class="text_left">Traproid Shield</td>
+              </tr>
+              <tr>
+                <td>Sealed Room (1st)</td>
+                <td>6~10F</td>
+                <td>11F</td>
+                <td>30%</td>
+                <td class="text_left">Homing Blade, Gamarra Shield</td>
+              </tr>
+              <tr>
+                <td>Sealed Room (2nd)</td>
+                <td>70~80F</td>
+                <td>81F</td>
+                <td>30%</td>
+                <td class="text_left">Sacred Sword, Sacred Shield, Iron Hammer,<br>Dodge Shield, Reflect Shield, Critical Bracelet</td>
+              </tr>
+              <tr>
+                <td>Road to the End (1st)</td>
+                <td>6~10F</td>
+                <td>11F</td>
+                <td>25%</td>
+                <td class="text_left">-</td>
+              </tr>
+              <tr>
+                <td>Road to the End (2nd)</td>
+                <td>24~29F</td>
+                <td>30F</td>
+                <td>30%</td>
+                <td class="text_left">-</td>
+              </tr>
+              <tr>
+                <td>Road to the End (3rd)</td>
+                <td>90~95F</td>
+                <td>95F</td>
+                <td>30%</td>
+                <td class="text_left">Basilisk Shield, Mijinha</td>
+              </tr>
+            </tbody>
+          </table>
           <h2 id="maps">Maps</h2>
           <p>Text</p>
           <p>Images</p>
