working on the golden interval page

--- a/html/system/golden-interval.html
+++ b/html/system/golden-interval.html
@@ -65,7 +65,7 @@
                 <td>3~6F</td>
                 <td>7F</td>
                 <td>30%</td>
-                <td class="text_left">Onigiri Sword, Gamarra Whip</td>
+                <td class="text_left"><a href="/shiren2/html/item/weapons.html#onigiri_sword">Onigiri Sword</a>, <a href="/shiren2/html/item/weapons.html#gamarra_whip">Gamarra Whip</a></td>
               </tr>
               <tr>
                 <td><a href="/shiren2/html/dungeon/onigashima.html#golden_interval">Onigashima</a></td>
@@ -79,48 +79,49 @@
                 <td>50~55F</td>
                 <td>56F</td>
                 <td>100%</td>
-                <td class="text_left">Traproid Shield</td>
+                <td class="text_left"><a href="/shiren2/html/item/shields.html#traproid_shield">Traproid Shield</a></td>
               </tr>
               <tr>
-                <td>Sealed Room (1st)</td>
+                <td><a href="/shiren2/html/dungeon/sealed-room.html#golden_interval_1">Sealed Room (1st)</a></td>
                 <td>6~10F</td>
                 <td>11F</td>
                 <td>30%</td>
-                <td class="text_left">Homing Blade, Gamarra Shield</td>
+                <td class="text_left"><a href="/shiren2/html/item/weapons.html#homing_blade">Homing Blade</a>, <a href="/shiren2/html/item/shields.html#gamarra_shield">Gamarra Shield</a></td>
               </tr>
               <tr>
-                <td>Sealed Room (2nd)</td>
+                <td><a href="/shiren2/html/dungeon/sealed-room.html#golden_interval_2">Sealed Room (2nd)</a></td>
                 <td>70~80F</td>
                 <td>81F</td>
                 <td>30%</td>
-                <td class="text_left">Sacred Sword, Sacred Shield, Iron Hammer,<br>Dodge Shield, Reflect Shield, Critical Bracelet</td>
+                <td class="text_left"><a href="/shiren2/html/item/weapons.html#sacred_sword">Sacred Sword</a>, <a href="/shiren2/html/item/shields.html#sacred_shield">Sacred Shield</a>, <a href="/shiren2/html/item/weapons.html#iron_hammer">Iron Hammer</a>,<br><a href="/shiren2/html/item/shields.html#dodge_shield">Dodge Shield</a>, <a href="/shiren2/html/item/shields.html#reflect_shield">Reflect Shield</a>, <a href="/shiren2/html/item/bracelets.html#critical_bracelet">Critical Bracelet</a></td>
               </tr>
               <tr>
-                <td>Road to the End (1st)</td>
+                <td><a href="/shiren2/html/dungeon/road-to-the-end.html#golden_interval_1">Road to the End (1st)</a></td>
                 <td>6~10F</td>
                 <td>11F</td>
                 <td>25%</td>
                 <td class="text_left">-</td>
               </tr>
               <tr>
-                <td>Road to the End (2nd)</td>
+                <td><a href="/shiren2/html/dungeon/road-to-the-end.html#golden_interval_2">Road to the End (2nd)</a></td>
                 <td>24~29F</td>
                 <td>30F</td>
                 <td>30%</td>
                 <td class="text_left">-</td>
               </tr>
               <tr>
-                <td>Road to the End (3rd)</td>
+                <td><a href="/shiren2/html/dungeon/road-to-the-end.html#golden_interval_3">Road to the End (3rd)</a></td>
                 <td>90~95F</td>
                 <td>95F</td>
                 <td>30%</td>
-                <td class="text_left">Basilisk Shield, Mijinha</td>
+                <td class="text_left"><a href="/shiren2/html/item/shields.html#basilisk_shield">Basilisk Shield</a>, <a href="/shiren2/html/item/weapons.html#mijinha">Mijinha</a></td>
               </tr>
             </tbody>
           </table>
           <h2 id="maps">Maps</h2>
           <p>Text</p>
-          <p>Images</p>
+          <img src="/shiren2/image/maps/golden_interval.png" width="600" height="734" alt="Golden Interval Maps">
+          <p class="credit_text">Image source: <a href="http://shiren2.lsx3.com/?%B2%AB%B6%E2%A4%CE%B4%D6">風来のシレン2 鬼襲来！シレン城！ 攻略Wiki</a></p>
           <h2 id="items">Items</h2>
           <h3 id="shuten_trail_hard">Shuten Trail Hard</h3>
           <p>Table</p>
