finished golden interval page

--- a/html/system/golden-interval.html
+++ b/html/system/golden-interval.html
@@ -23,7 +23,10 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Golden Interval</h2>
-          <p>Text</p>
+          <p>Golden Intervals are one of the unique mechanics of Shiren 2.<br>Golden Stairs can be found inside walls on certain floors of Random Dungeons.<br>A special melody plays when you first discover the Golden Stairs,<br>and climbing them leads to a bonus area called Golden Interval.</p>
+          <p>Golden Intervals are Shuffle Dungeons consisting of 3~5 floors,<br>and often have powerful or exclusive items on the ground.<br>The final floor of a Golden interval doesn't spawn any monsters,<br>but instead is a single room with a treasure chest that contains a rare item.</p>
+          <p>However, Golden Intervals are often more difficult than the floor range they can be found in.<br>Stronger monsters spawn (in particular, Lashaaga in the 2nd Golden Interval of Road to the End),<br>Riceballs cannot be found on the ground, items for emergencies are either nonexistent or rare,<br>and in <a href="/shiren2/html/dungeon/halfway-well.html">Halfway Well</a>'s case, traps cannot be found, and you can't exit using a Trapper Bracelet.</p>
+          <p>On a side note, Shopkeepers don't react to Golden Stairs, so you can steal items<br>easily if you happen to discover them as a result of reading a Wall Collapse Scroll.<br>Lastly, Golden Stairs can occasionally generate inside unbreakable walls,<br>so you'll need to use a Wall Collapse Scroll rather than Pickaxes or Cannoballs in that case.</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#summary">Summary</a></li>
             <li><a href="#maps">Maps</a></li>
@@ -119,28 +122,304 @@
             </tbody>
           </table>
           <h2 id="maps">Maps</h2>
-          <p>Text</p>
+          <p>Golden Intervals are Shuffle Dungeons, so the maps are selected out of a predetermined list.<br>The exit is generally in the lower half of the map, so keep that in mind when looking to advance floors.<br>Note that Shuffle Dungeons will never generate Monster Houses.</p>
           <img src="/shiren2/image/maps/golden_interval.png" width="600" height="734" alt="Golden Interval Maps">
           <p class="credit_text">Image source: <a href="http://shiren2.lsx3.com/?%B2%AB%B6%E2%A4%CE%B4%D6">風来のシレン2 鬼襲来！シレン城！ 攻略Wiki</a></p>
           <h2 id="items">Items</h2>
-          <h3 id="shuten_trail_hard">Shuten Trail Hard</h3>
-          <p>Table</p>
-          <h3 id="onigashima">Onigashima</h3>
-          <p>Table</p>
-          <h3 id="halfway_well">Halfway Well</h3>
-          <p>Table</p>
+          <h3 id="shuten_trail_hard"><a href="/shiren2/html/dungeon/shuten-trail-hard.html#golden_interval">Shuten Trail Hard (3~6F)</a></h3>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Razor Wind, Drain Buster, Cyclops Killer, Ghost Sickle, Katana</td>
+              </tr>
+              <tr>
+                <td class="text_left">Shield</td>
+                <td class="text_left">Leather Shield, Counter Shield, Scale Shield,<br>Blast Shield, Tribal Shield, Beetle Shield</td>
+              </tr>
+              <tr>
+                <td class="text_left">Bracelet</td>
+                <td class="text_left">Bullseye Bracelet</td>
+              </tr>
+              <tr>
+                <td class="text_left">Scroll</td>
+                <td class="text_left">Heaven Scroll, Earth Scroll, Sanctuary Scroll, Slumber Scroll</td>
+              </tr>
+              <tr>
+                <td class="text_left">Pot</td>
+                <td class="text_left">Synthesis Pot</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Onigiri Sword, Gamarra Whip, No Hunger Bracelet</td>
+              </tr>
+            </tbody>
+          </table>
+          <h3 id="onigashima"><a href="/shiren2/html/dungeon/onigashima.html#golden_interval">Onigashima (8~15F)</a></h3>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Ivory Sword, Dragon Killer, Golden Sword</td>
+              </tr>
+              <tr>
+                <td class="text_left">Shield</td>
+                <td class="text_left">Ivory Shield, Dragon Shield, Golden Shield</td>
+              </tr>
+              <tr>
+                <td class="text_left">Bracelet</td>
+                <td class="text_left">Phantasm Bracelet</td>
+              </tr>
+              <tr>
+                <td class="text_left">Scroll</td>
+                <td class="text_left">Heaven Scroll, Earth Scroll, Sanctuary Scroll, Plating Scroll</td>
+              </tr>
+              <tr>
+                <td class="text_left">Pot</td>
+                <td class="text_left">Storage Pot, Surprise Pot</td>
+              </tr>
+              <tr>
+                <td class="text_left">Staff</td>
+                <td class="text_left">Swap Staff, Balance Staff, Slow Staff, Knockback Staff,<br>Miss Staff, Possession Staff, Grass Gainer, Grass Tosser</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Golden Sword, Golden Shield, Wooden Shield, Evasive Shield, Happy Shield,<br>Echo Shield, Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
+              </tr>
+            </tbody>
+          </table>
+          <h3 id="halfway_well"><a href="/shiren2/html/dungeon/halfway-well.html#golden_interval">Halfway Well (50~55F)</a></h3>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Club (Using Kengo's Katana)</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Traproid Shield</td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="sealed_room">Sealed Room</h3>
-          <h4 id="sealed_room_first">First</h4>
-          <p>Table</p>
-          <h4 id="sealed_room_second">Second</h4>
-          <p>Table</p>
+          <h4 id="sealed_room_first"><a href="/shiren2/html/dungeon/sealed-room.html#golden_interval_1">First (6~10F)</a></h4>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Homing Blade</td>
+              </tr>
+              <tr>
+                <td class="text_left">Shield</td>
+                <td class="text_left">Gamarra Shield</td>
+              </tr>
+              <tr>
+                <td class="text_left">Bracelet</td>
+                <td class="text_left">Parry Bracelet, Paper Thin Bracelet</td>
+              </tr>
+              <tr>
+                <td class="text_left">Scroll</td>
+                <td class="text_left">Heaven Scroll, Earth Scroll</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Golden Sword, Golden Shield, Wooden Shield, Evasive Shield, Happy Shield,<br>Echo Shield, Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
+              </tr>
+            </tbody>
+          </table>
+          <h4 id="sealed_room_second"><a href="/shiren2/html/dungeon/sealed-room.html#golden_interval_2">Second (70~80F)</a></h4>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Sacred Sword, Iron Hammer</td>
+              </tr>
+              <tr>
+                <td class="text_left">Shield</td>
+                <td class="text_left">Sacred Shield, Fuuma Shield</td>
+              </tr>
+              <tr>
+                <td class="text_left">Bracelet</td>
+                <td class="text_left">Parry Bracelet, Critical Bracelet</td>
+              </tr>
+              <tr>
+                <td class="text_left">Scroll</td>
+                <td class="text_left">Heaven Scroll, Earth Scroll</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Dodge Shield, Reflect Shield</td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="road_to_the_end">Road to the End</h3>
-          <h4 id="road_to_the_end_first">First</h4>
-          <p>Table</p>
-          <h4 id="road_to_the_end_second">Second</h4>
-          <p>Table</p>
-          <h4 id="road_to_the_end_third">Third</h4>
-          <p>Table</p>
+          <h4 id="road_to_the_end_first"><a href="/shiren2/html/dungeon/road-to-the-end.html#golden_interval_1">First (6~10F)</a></h4>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Ivory Sword, Dragon Killer, Manji-Kabura</td>
+              </tr>
+              <tr>
+                <td class="text_left">Shield</td>
+                <td class="text_left">Ivory Shield, Dragon Shield, Happy Shield</td>
+              </tr>
+              <tr>
+                <td class="text_left">Bracelet</td>
+                <td class="text_left">No Control Bracelet (Using Shihan)</td>
+              </tr>
+              <tr>
+                <td class="text_left">Scroll</td>
+                <td class="text_left">Heaven Scroll, Earth Scroll, Identify Scroll</td>
+              </tr>
+              <tr>
+                <td class="text_left">Pot</td>
+                <td class="text_left">Storage Pot, Surprise Pot</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Golden Sword, Golden Shield, Wooden Shield, Happy Shield, Evasive Shield,<br>Echo Shield, Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
+              </tr>
+            </tbody>
+          </table>
+          <h4 id="road_to_the_end_second"><a href="/shiren2/html/dungeon/road-to-the-end.html#golden_interval_2">Second (24~29F)</a></h4>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Ivory Sword, Dragon Killer, Manji-Kabura</td>
+              </tr>
+              <tr>
+                <td class="text_left">Shield</td>
+                <td class="text_left">Ivory Shield, Dragon Shield, Happy Shield</td>
+              </tr>
+              <tr>
+                <td class="text_left">Bracelet</td>
+                <td class="text_left">No Control Bracelet (Using Shihan)</td>
+              </tr>
+              <tr>
+                <td class="text_left">Scroll</td>
+                <td class="text_left">Heaven Scroll, Earth Scroll, Identify Scroll</td>
+              </tr>
+              <tr>
+                <td class="text_left">Pot</td>
+                <td class="text_left">Storage Pot, Surprise Pot</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Golden Sword, Golden Shield, Wooden Shield, Evasive Shield, Echo Shield,<br>Critical Arrow, Razor Arrow, Revival Grass, Angel Seed, Sanctuary Scroll</td>
+              </tr>
+            </tbody>
+          </table>
+          <h4 id="road_to_the_end_third"><a href="/shiren2/html/dungeon/road-to-the-end.html#golden_interval_3">Third (90~95F)</a></h4>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Category</th>
+                <th>Items</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text_left">Weapon</td>
+                <td class="text_left">Ivory Sword, Dragon Killer, Manji-Kabura</td>
+              </tr>
+              <tr>
+                <td class="text_left">Shield</td>
+                <td class="text_left">Ivory Shield, Dragon Shield, Happy Shield, Basilisk Shield</td>
+              </tr>
+              <tr>
+                <td class="text_left">Bracelet</td>
+                <td class="text_left">No Control Bracelet (Using Shihan)</td>
+              </tr>
+              <tr>
+                <td class="text_left">Scroll</td>
+                <td class="text_left">Heaven Scroll, Earth Scroll, Identify Scroll</td>
+              </tr>
+              <tr>
+                <td class="text_left">Pot</td>
+                <td class="text_left">Storage Pot, Surprise Pot</td>
+              </tr>
+              <tr>
+                <td class="text_left">Gitan</td>
+                <td class="text_left">10~2000 Gitan</td>
+              </tr>
+              <tr>
+                <td class="text_left">Treasure</td>
+                <td class="text_left">Mijinha</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </main>
     </div>
