working on monster kingdom page

--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -23,7 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Monster Kingdom</h2>
-          <p>Text</p>
+          <p>Monster Kingdom is a zoo type area for monsters that unlocks after clearing Onigashima.<br>Monsters captured using Monster Pots can be registered and made to live here.<br>You can take or deposit monsters freely, and monsters registered to Monster Kingdom<br>will return here in the event that they are defeated in a dungeon.</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#monster_kingdom_zones">Monster Kingdom Zones</a>
               <ul>
@@ -50,12 +50,92 @@
             <li><a href="#if_you_complete_monster_kingdom">If you complete Monster Kingdom...</a></li>
           </ul>
           <h3 id="monster_kingdom_zones">Monster Kingdom Zones</h3>
-          <p>Text</p>
+          <p>Zones are areas within the Kingdom where you can enjoy viewing monsters that have been registered.<br>Monsters are organized by family, with the exclusion of N'dubbas which have individual enclosures.</p>
+          <p>The sign next to an enclosure provides descriptions for each monster within the enclosure.<br>The same descriptions are displayed if you swing or throw a Knowledge Staff at a monster.<br>Monster attack animations can also be enjoyed by idling after selecting a monster name,<br>though some monsters won't use their special attack animations while inside Monster Kingdom.</p>
+          <p>Overall, one could say it's Shiren 2's most popular relaxation spot.<br>It might be fun to visit these zones every now and then, and recall where you met each monster.</p>
           <h4 id="wild_kingdom">Wild Kingdom</h4>
-          <p>Table</p>
+          <table class="table_less_padding">
+            <thead>
+              <tr>
+                <th>Lv1</th>
+                <th>Lv2</th>
+                <th>Lv3</th>
+                <th>Lv4</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Taurus</td>
+                <td>Minotaur</td>
+                <td>Megataur</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Porky</td>
+                <td>Porkchop</td>
+                <td>Porkton</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>King Tusker</td>
+                <td>Monarch Tusker</td>
+                <td>Emperor Tusker</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Horse Ronin</td>
+                <td>Horse Samurai</td>
+                <td>Horse Shogun</td>
+                <td>Horse Emperor</td>
+              </tr>
+              <tr>
+                <td>Bat Kangaroo</td>
+                <td>Evil Kangaroo</td>
+                <td>Devil Kangaroo</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Sheep Priest</td>
+                <td>Goat Pastor</td>
+                <td>Gazelle Pope</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>Tiger Tosser</td>
+                <td>Tiger Hurler</td>
+                <td>Tiger Chucker</td>
+                <td>-</td>
+              </tr>
+            </tbody>
+          </table>
           <h4 id="ndubba_house">N'dubba House</h4>
-          <p>Text</p>
-          <p>Table</p>
+          <p>Every color of N'dubba must be captured to complete Monster Kingdom.<br>There are a total of 9 colors based on the N'dubba's age.</p>
+          <table class="table_less_padding">
+            <tr>
+              <td>Green</td>
+              <td>1~19yr</td>
+              <td>Pink</td>
+              <td>20~29yr</td>
+              <td>Blue</td>
+              <td>30~59yr</td>
+            </tr>
+            <tr>
+              <td>Red</td>
+              <td>60~69yr</td>
+              <td>Light Blue</td>
+              <td>70~76yr</td>
+              <td>Yellow</td>
+              <td>77~87yr</td>
+            </tr>
+            <tr>
+              <td>Gray</td>
+              <td>88~89yr</td>
+              <td>Light Green</td>
+              <td>90~98yr</td>
+              <td>White</td>
+              <td>99yr</td>
+            </tr>
+          </table>
           <h4 id="flying_friends">Flying Friends</h4>
           <p>Table</p>
           <h4 id="dragon_mountain">Dragon Mountain</h4>
